# SofaMJEDFEM

./: Authors.md  CMakeLists.txt  README.md  SofaMJEDFEMConfig.cmake.in
.github/workflows/: ci.yml
SofaMJEDFEM/: CMakeLists.txt  MJEDTetrahedralForceField.cpp  MJEDTetrahedralForceField.h  MJEDTetrahedralForceField.inl  SofaMJEDFEM.txt  SofaMJEDFEMConfig.cmake.in  initMJEDFEM.cpp  initMJEDFEM.h  initSofaMJEDFEM.cpp
SofaMJEDFEM/examples/: compareMJED-Corot_Cylinder.scn
SofaMJEDFEM/fem/material/: BoyceAndArrudaMJED.h  CostaMJED.h  MooneyRivlinMJED.h  NeoHookeanIsotropicMJED.h  NeoHookeanMJED.h  OgdenMJED.h  STVenantKirchhoffMJED.h  VerondaWestmanMJED.h  material.cpp
src/SofaMJEDFEM/: MJEDTetrahedralForceField.cpp  MJEDTetrahedralForceField.h  MJEDTetrahedralForceField.inl  config.h.in  initSofaMJEDFEM.cpp
src/SofaMJEDFEM/fem/material/: BoyceAndArrudaMJED.h  CostaMJED.h  HyperelasticMaterialMJED.h  MooneyRivlinMJED.h  NeoHookeanIsotropicMJED.h  NeoHookeanMJED.h  OgdenMJED.h  STVenantKirchhoffMJED.h  VerondaWestmanMJED.h  material.cpp
